--- a/pi-race-strategy-details.html
+++ b/pi-race-strategy-details.html
@@ -77,7 +77,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <ol>
             <li><a href="index.html#portfolio">Portfolio</a></li>
-            <li>AMARO</li>
+            <li>Pi Race Strategy</li>
           </ol>
         </div>
       </div>
@@ -94,27 +94,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-5.png" alt="">
+                  <img src="images/pi-race-strategy/pi-race-strategy-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-1.png" alt="">
+                  <img src="images/pi-race-strategy/pi-race-strategy-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-6.jpg" alt="">
+                  <img src="images/pi-race-strategy/pi-race-strategy-3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-2.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="images/amaro/amaro-7.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="images/amaro/amaro-4.png" alt="">
+                  <img src="images/pi-race-strategy/pi-race-strategy-4.jpg" alt="">
                 </div>
 
               </div>
@@ -126,25 +118,21 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name</strong>: Automated Microelectronics Analysis & Reporting Optimization <i>(AMARO)</i></li>
-                <li><strong>Client</strong>: NSWC Crane</li>
-                <li><strong>Project Date</strong>: Jan 2020 - July 2022</li>
-                <li><strong>Project Site</strong>: <i style="color: darkgrey;">redacted</i></li>
-                <li><strong>Tech Stack</strong>: Python Backend, .NET API Middleware, React.js Frontend</li>
-                <li><strong>Additional Information</strong>: This project was developed for and used by the Department of Defense (NSWC Crane). 
-                  My role in this project was Senior Engineer for the <i>.NET API</i> solution. 
-                  I lead a team of 3 developers while working closely with roughly 20 other individual contributors across all aspects of the solution team.
+                <li><strong>Name</strong>: Pi Race Strategy</li>
+                <li><strong>Client</strong>: Cosworth Electronics</li>
+                <li><strong>Project Date</strong>: 2018</li>
+                <li><strong>Project Site</strong>: <i style="color: darkgrey;">N/A</i></li>
+                <li><strong>Tech Stack</strong>: .NET Framework, WPF</li>
+                <li><strong>Additional Information</strong>: This project was developed as an internal testing tool and demo product for potential customers of Cosworth's bespoke SDK (Pi Data Access). 
                   <br>
                   <br>
-                  Many hats were worn during this project, including leading api development, front end development, design review, SOW estimations, extensive feature development, cloud engineering, market research, and many more. 
+                  This was built in .NET Framework using Microsoft WPF utilizing a MVVM design pattern, I was the sole developer on this project.  
                   <br>
                   <br>
-                  The primary function of this application was to ingest and analyze thousands of structured and unstructred data points from commercial and open source data sources to reveal <i>critical</i> nodes in design, production, and distribution
-                  when a part or company may be susceptible to malicious insertions, inferior substitutions, supply interruptions, or IP theft.
-                </li>
-                <hr>
-                <li>If you have any questions, please reach out to me directly.</li>
-
+                  This Windows application connected to a local COM port, attached to a Real-time data stream from Cosworth's SDK, displayed data and performed real-time calculations to calculate the potential pit stop window and strategies.
+                  A lot of clients built many in-house products using this as a foundation. 
+                  <br>
+                  <br>
               </ul>
             </div>
             <div class="portfolio-description">
