--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Austin Coffman</h4>
               <p><em>Results-driven human with 5+ years in Software Engineering, ready to fearlessly solve problems. 
-                Proven ability to multi-task in a dynamic fast-paced environment while delvering outcomes.
-                Lasty, a firm believer that <u>people are key</u>, all things software start and end with people.</em></p>
+                Proven ability to multi-task in a dynamic fast-paced environment while delivering outcomes.
+                Lastly, a firm believer that <u>people are key</u>, all things software start and end with people.</em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -311,9 +311,9 @@
               <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
               <ul>
                 <li>Lead developer for several projects, many of them are for state (Indiana) and federal (Department of Defense) government.</li>
-                <li>Create CI/CD pipelines for a varity of deployment contraints.</li>
-                <li>Implemented a custom GraphQL based Query Builder tool that allows users to query any parameter in a relational way to generate results, reports, comparisions, and exports. All custom and in-house, while being scalable.</li>
-                <li>Optimize legacy systems to greatly improve performance in data acquisition, load times, and securty vulnerabilities.</li>
+                <li>Create CI/CD pipelines for a variety of deployment constraints.</li>
+                <li>Implemented a custom GraphQL based Query Builder tool that allows users to query any parameter in a relational way to generate results, reports, comparisons, and exports. All custom and in-house, while being scalable.</li>
+                <li>Optimize legacy systems to greatly improve performance in data acquisition, load times, and security vulnerabilities.</li>
                 <li>Consult new clients/projects as a solution architect, providing possible solutions, outcomes, timelines, estimations, and expectations.</li>
               </ul>
             </div>
@@ -322,7 +322,7 @@
               <h5>Jan 2020 - Feb 2022</h5>
               <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
               <ul>
-                <li>Manufactured RESTful APIs using .NET with several unqiue database and datasource connetions and processes, authentication, and data transformation.</li>
+                <li>Manufactured RESTful APIs using .NET with several unique database and datasource connections and processes, authentication, and data transformation.</li>
                 <li>Collaborated with Front End and Data Engineers, sorting issues and working through the SDLC.</li>
                 <li>Deep understanding of many .NET packages, including Entity Framework, LINQ, and Identity.</li>
                 <li>Designed and maintained performant relational databases.</li>
