moving some files into directories to clean some things up

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <img src="images/amaro/amaro-0.JPG" class="img-fluid" alt="">
               </div>
               <div class="portfolio-links">
-                <a href="amaro-details.html" title="More Details">AMARO</i></a>
+                <a href="pages/amaro-details.html" title="More Details">AMARO</i></a>
               </div>
             </div>
           </div>
@@ -391,7 +391,7 @@
                 <img src="images/eseat/eseat-0.jpg" class="img-fluid" alt="">
               </div>
               <div class="portfolio-links">
-                <a href="eseat-details.html" title="More Details">ESEAT</a>
+                <a href="pages/eseat-details.html" title="More Details">ESEAT</a>
               </div>
             </div>
           </div>
@@ -402,7 +402,7 @@
                 <img src="images/terminal/terminal-0.jpg" class="img-fluid" alt="">
               </div>
               <div class="portfolio-links">
-                <a href="terminal-details.html" title="More Details">Terminal in CSS</a>
+                <a href="pages/terminal-details.html" title="More Details">Terminal in CSS</a>
               </div>
             </div>
           </div>
@@ -413,7 +413,7 @@
                 <img src="images/pi-race-strategy/pi-race-strategy-0.jpg" class="img-fluid" alt="">
               </div>
               <div class="portfolio-links">
-                <a href="pi-race-strategy-details.html" title="More Details">Pi Race Strategy</a>
+                <a href="pages/pi-race-strategy-details.html" title="More Details">Pi Race Strategy</a>
               </div>
             </div>
           </div>
