--- a/pages/amaro-details.html
+++ b/pages/amaro-details.html
@@ -10,22 +10,22 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="images/favicon.ico" rel="icon">
-  <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../images/favicon.ico" rel="icon">
+  <link href="../images/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets2/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets2/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets2/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets2/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets2/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../assets2/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets2/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets2/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets2/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets2/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets2/css/style.css" rel="stylesheet">
+  <link href="../assets2/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: iPortfolio - v3.8.1
@@ -45,8 +45,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="images/headshot.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Austin Coffman</a></h1>
+        <img src="../images/headshot.jpeg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="../index.html">Austin Coffman</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="mailto:austincartercoffman@gmail.com"><i class="bx bx-envelope"></i></a>
           <a href="https://www.linkedin.com/in/austin-coffman-82b4a495/"><i class="bx bxl-linkedin"></i></a>
@@ -56,13 +56,13 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#technologies" class="nav-link scrollto"><i class="bx bx-terminal"></i> <span>Technologies</span></a></li>
-          <li><a href="index.html#soft-skills" class="nav-link scrollto"><i class="bx bxs-conversation"></i> <span>Soft Skills</span></a></li>
-          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="../index.html#hero" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="../index.html#technologies" class="nav-link scrollto"><i class="bx bx-terminal"></i> <span>Technologies</span></a></li>
+          <li><a href="../index.html#soft-skills" class="nav-link scrollto"><i class="bx bxs-conversation"></i> <span>Soft Skills</span></a></li>
+          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="../index.html#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -76,7 +76,7 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <ol>
-            <li><a href="index.html#portfolio">Portfolio</a></li>
+            <li><a href="../index.html#portfolio">Portfolio</a></li>
             <li>AMARO</li>
           </ol>
         </div>
@@ -94,27 +94,27 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-5.png" alt="">
+                  <img src="../images/amaro/amaro-5.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-1.png" alt="">
+                  <img src="../images/amaro/amaro-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-6.jpg" alt="">
+                  <img src="../images/amaro/amaro-6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-2.png" alt="">
+                  <img src="../images/amaro/amaro-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-7.jpg" alt="">
+                  <img src="../images/amaro/amaro-7.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="images/amaro/amaro-4.png" alt="">
+                  <img src="../images/amaro/amaro-4.png" alt="">
                 </div>
 
               </div>
@@ -139,7 +139,7 @@
                   Many hats were worn during this project, including leading api development, front end development, design review, SOW estimations, extensive feature development, cloud engineering, market research, and many more. 
                   <br>
                   <br>
-                  The primary function of this application was to ingest and analyze thousands of structured and unstructred data points from commercial and open source data sources to reveal <i>critical</i> nodes in design, production, and distribution
+                  The primary function of this application was to ingest and analyze thousands of structured and unstructured data points from commercial and open source data sources to reveal <i>critical</i> nodes in design, production, and distribution
                   when a part or company may be susceptible to malicious insertions, inferior substitutions, supply interruptions, or IP theft.
                 </li>
                 <hr>
@@ -165,18 +165,18 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets2/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets2/vendor/aos/aos.js"></script>
-  <script src="assets2/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets2/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets2/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets2/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets2/vendor/typed.js/typed.min.js"></script>
-  <script src="assets2/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets2/vendor/php-email-form/validate.js"></script>
+  <script src="../assets2/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../assets2/vendor/aos/aos.js"></script>
+  <script src="../assets2/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets2/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets2/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets2/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets2/vendor/typed.js/typed.min.js"></script>
+  <script src="../assets2/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../assets2/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets2/js/main.js"></script>
+  <script src="../assets2/js/main.js"></script>
 
 </body>
 
