--- a/pages/amaro-details.html
+++ b/pages/amaro-details.html
@@ -81,44 +81,11 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
 
-          <div class="col-lg-12">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/amaro/amaro-5.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/amaro/amaro-1.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/amaro/amaro-6.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/amaro/amaro-2.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/amaro/amaro-7.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/amaro/amaro-4.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-12">
+          <div class="col-lg-10">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Project Details</h3>
               <ul>
                 <li><strong>Name</strong>: Automated Microelectronics Analysis & Reporting Optimization <i>(AMARO)</i></li>
                 <li><strong>Client</strong>: NSWC Crane</li>
@@ -141,14 +108,44 @@
 
               </ul>
             </div>
-            <div class="portfolio-description">
-              
-              <p>
-                
-              </p>
-            </div>
           </div>
 
+
+          <div class="col-lg-10">
+            <div class="portfolio-info">
+              <h3>Project Images</h2>
+              <div class="col-lg-9 portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/amaro/amaro-5.png" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/amaro/amaro-1.png" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/amaro/amaro-6.jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/amaro/amaro-2.png" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/amaro/amaro-7.jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/amaro/amaro-4.png" alt="">
+                  </div>
+
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+          </div>
+          </div>
         </div>
 
       </div>
