--- a/index.html
+++ b/index.html
@@ -372,56 +372,56 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
-            <div class="portfolio-wrap">
-              <div>
-                <img src="assets/images/gps/gps-0.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="portfolio-links">
-                <a href="pages/gps-details.html" title="More Details">GPS</i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
-            <div class="portfolio-wrap">
-              <div>
-                <img src="assets/images/amaro/amaro-0.JPG" class="img-fluid" alt="">
-              </div>
-              <div class="portfolio-links">
-                <a href="pages/amaro-details.html" title="More Details">AMARO</i></a>
+            <div class="card">
+              <img src="assets/images/gps/gps-0.jpg" class="card-img-top" alt="">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Graduates Prepared to Succeed</h5>
+                <p class="card-text text-muted">Built for the Indiana Department of Education, serving as a state wide metric for student and school performance.</p>
+                <a class="card-button align-self-end" href="pages/gps-details.html" title="More Details">More Details</i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
-            <div class="portfolio-wrap">
-              <div>
-                <img src="assets/images/eseat/eseat-0.jpg" class="img-fluid" alt="">
+            <div class="card">
+              <img src="assets/images/amaro/amaro-0.JPG" class="card-img-top" alt="">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">AMARO</h5>
+                <p class="card-text text-muted">A part-centric supply chain solution providing microelectronics procurement assurance to the U.S. Department of Defense.</p>
+                <a class="card-button align-self-end" href="pages/amaro-details.html" title="More Details">More Details</i></a>
               </div>
-              <div class="portfolio-links">
-                <a href="pages/eseat-details.html" title="More Details">ESEAT</a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
+            <div class="card">
+              <img src="assets/images/eseat/eseat-0.jpg" class="card-img-top" alt="">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">ESEAT</h5>
+                <p class="card-text text-muted">Military curated budgetary document reference system, providing digestible data for at the sub-project and up level.</p>
+                <a class="card-button align-self-end" href="pages/eseat-details.html" title="More Details">More Details</i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
-            <div class="portfolio-wrap">
-              <div>
-                <img src="assets/images/terminal/terminal-0.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="portfolio-links">
-                <a href="pages/terminal-details.html" title="More Details">Terminal in CSS</a>
+            <div class="card">
+              <img src="assets/images/terminal/terminal-0.jpg" class="card-img-top" alt="">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Terminal in CSS</h5>
+                <p class="card-text text-muted">Small personal project to become more comfortable with working on CSS animations and JS.</p>
+                <a class="card-button align-self-end" href="pages/terminal-details.html" title="More Details">More Details</i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
-            <div class="portfolio-wrap">
-              <div>
-                <img src="assets/images/pi-race-strategy/pi-race-strategy-0.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="portfolio-links">
-                <a href="pages/pi-race-strategy-details.html" title="More Details">Pi Race Strategy</a>
+            <div class="card">
+              <img src="assets/images/pi-race-strategy/pi-race-strategy-0.jpg" class="card-img-top" alt="">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Pi Race Strategy</h5>
+                <p class="card-text text-muted">Ingests Real-Time data logger streams for use by IndyCar teams to aid in possible pit strategies and fuel consumption.</p>
+                <a class="card-button align-self-end" href="pages/pi-race-strategy-details.html" title="More Details">More Details</i></a>
               </div>
             </div>
           </div>
