--- a/pages/pi-race-strategy-details.html
+++ b/pages/pi-race-strategy-details.html
@@ -82,36 +82,10 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div class="row gy-4">
-
-          <div class="col-lg-12">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/pi-race-strategy/pi-race-strategy-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/pi-race-strategy/pi-race-strategy-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/pi-race-strategy/pi-race-strategy-3.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/images/pi-race-strategy/pi-race-strategy-4.jpg" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-12">
+        <div class="row gy-4 justify-content-center">
+          <div class="col-lg-10">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Project Details</h3>
               <ul>
                 <li><strong>Name</strong>: Pi Race Strategy</li>
                 <li><strong>Client</strong>: Cosworth Electronics</li>
@@ -130,14 +104,35 @@
                   <br>
               </ul>
             </div>
-            <div class="portfolio-description">
-              
-              <p>
-                
-              </p>
-            </div>
           </div>
 
+          <div class="col-lg-10">
+            <div class="portfolio-info">
+              <h3>Project Images</h3>
+              <div class="col-lg-9 portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/pi-race-strategy/pi-race-strategy-1.jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/pi-race-strategy/pi-race-strategy-2.jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/pi-race-strategy/pi-race-strategy-3.jpg" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/images/pi-race-strategy/pi-race-strategy-4.jpg" alt="">
+                  </div>
+
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
