updating theme color

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Austin Coffman</h1>
-      <p>I'm a <span class="typed" data-typed-items="Developer, Pizza Enthusiast, Human Being"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Software Engineer, Car Enthusiast, Pizza Connoisseur, Human Being"></span></p>
     </div>
   </section><!-- End Hero -->
 
